[package]
name = "nng-c"
version = "1.10.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
keywords = ["nng", "nanomsg"]
categories = ["api-bindings"]
description = "High level bindings nng C library"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/nng-c"
documentation = "https://docs.rs/crate/nng-c"

[dependencies.error-code]
version = "3"

[dependencies.nng-c-sys]
version = "1.10.0"

[dependencies.log]
version = "0.4"
default-features = false
optional = true

[dependencies.tracing]
version = "0.1"
default-features = false
optional = true

[[test]]
name = "tls"
required-features = ["tls"]

[features]
# Enables HTTP transport code
http = ["nng-c-sys/http"]
# Enables websocket transport code
websocket = ["nng-c-sys/websocket"]
# Enables TLS transport code
tls = ["nng-c-sys/tls"]

[package.metadata.docs.rs]
features = ["http", "websocket", "tls", "tracing", "log"]
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
